--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ main {
     z-index: 1;
     display: none;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
     padding: 50px;
     background-color: #f5f5f5;
@@ -172,4 +173,11 @@ main {
 
 .green {
     background-color: #9be06c !important;
+}
+
+.error {
+    text-align: center;
+    font-size: 14px;
+    color: red;
+    max-width: 200px;
 }
